--- a/style.css
+++ b/style.css
@@ -164,6 +164,14 @@ textarea {
 #output-text {display: none;}
 #noinput {display: block;}
 
+#CopyBtn {
+  width: 70%;
+  height: 20%;
+  padding: var(--padding-1);
+  display: none;
+
+}
+
 footer {
   text-align: center;
   font-size: 10px;
